# project-x-processing-engine

./: .env  .env.example  .gitignore  Dockerfile  llm_project_rules.md  pyproject.toml  readme.md  requirements.txt  test_error_handling.py
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: deploy.yml  dev-ci.yml
src/: config.py  main.py
src/base/: base_llm.py
src/common/: logging.py  utils.py
src/config/: config.py  settings.py
src/db/: db.py
src/impl/: context_utils.py  gemini.py  llm_branches.py  llm_input.py  llm_processor.py
src/pipeline/: base.py  exceptions.py  smart.py  stt.py
src/project_x_processing_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prompt/context/: context_prompt.txt  context_response_schema.json  context_system_instruction.txt
src/prompt/noteback/: noteback_prompt.txt  noteback_response_schema.json  noteback_system_instruction.txt
src/prompt/stt/: stt_prompt.txt  stt_response_schema.json  stt_system_instruction.txt
src/providers/: llm_providers.py
src/schemas/: llm_types.py
src/services/: audio_augmentation.py  llm_engine.py  llm_service.py
src/services/llm/: llm_service.py
src/services/pubsub/: pubsub_service.py
src/util/: llm_util.py  util.py
src/utility/: logging.py
src/vector/: db.py
terraform/: main.tf  outputs.tf  variables.tf
