[project]
name = "project-x-processing-engine"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydub",
    "pydantic",
    "python-dotenv",
    "google-genai",
    "python-multipart",
    "ruff",
    "black",
    "pre-commit",
    "python-json-logger"
    "audioop-lts"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100
ignore = []

[tool.black]
line-length = 100
