[project]
name = "project-x-processing-engine"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydub",
    "pydantic",
    "python-dotenv",
    "google-genai",
    "python-multipart",
    "ruff",
    "black",
    "pre-commit",
    "python-json-logger"
    "audioop-lts"
    "python-json-logger",
    "google-cloud-storage",
    "psycopg",
    "google-cloud-aiplatform",
    "numpy",
    "pandas"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100