[project]
name = "project-x-processing-engine"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydub",
    "pydantic",
    "python-dotenv",
    "google-genai",
    "python-multipart",
    "python-json-logger",
    "audioop-lts",
    "google-cloud-storage",
    "psycopg",
    "google-cloud-aiplatform",
    "numpy",
    "pandas",
    "google-cloud-pubsub",
    "python-dotenv",
    "google-auth"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "black",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501", "E402"]

[tool.black]
line-length = 100